[update] main small correction

--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
             <div class="div">
               left in this life
             </div>
-            
           </div>
         </section>
       </div>
@@ -154,6 +153,7 @@
                         <p><span class="title-s">Age: </span> <span>30</span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
                         <p><span class="title-s">Email: </span> <span>t74.inoue.takayuki@gmail.com</span></p>
+                        <p><span class="title-s">Like: </span> <span>Surfing, Tennis, Badminton, Darts</span></p>
                       </div>
                     </div>
                   </div>
@@ -161,19 +161,27 @@
                     <p class="title-s">Skill</p>
                     <span>PHP</span> <span class="pull-right">90%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>HTML/CSS</span> <span class="pull-right">50%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>JAVASCRIPT</span> <span class="pull-right">50%</span>
-                    <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>PYTHON</span> <span class="pull-right">50%</span>
+                    <span>JavaScript</span> <span class="pull-right">50%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Python</span> <span class="pull-right">30%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Ruby</span> <span class="pull-right">30%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>PostgreSQL</span> <span class="pull-right">60%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>MySQL/MariaDB</span> <span class="pull-right">60%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -204,8 +212,11 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Web Application enginner with 3 years of experience in creating, maintaining and implementing source code that made up applications back-end functionalities and also in  designing and developing user interfaces, testing, debugging, and t Proven ability in optimizing web functionality that improve data retrieval and workflow efficiencies.
+                      Web Application enginner with 3 years of experience in creating, maintaining and implementing source code that made up applications back-end functionalities and also in designing and developing user interfaces, testing.
                     </p>
+                    <!-- <p class="lead">
+                      and t Proven ability in optimizing web functionality that improve data retrieval and workflow efficiencies.
+                    </p> -->
                   </div>
                 </div>
               </div>
@@ -266,7 +277,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Portfolio
+                WORK
               </h3>
               <p class="subtitle-a">
               </p>
@@ -277,16 +288,14 @@
         <div class="row">
           <div class="col-md-12">
             <div class="big-work-box row">
-              <div class="col-6">
-
+              <div class="col-lg-6 text-center">
                 <a href="assets/img/CostWithTime.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/CostWithTime.gif" alt="" class="img-fluid">
                   </div>
                 </a>
               </div>
-              <div class="col-6">
-
+              <div class="col-lg-6 text-center">
                 <a href="assets/img/CostWithTime2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/CostWithTime2.gif" alt="" class="img-fluid">
@@ -297,8 +306,9 @@
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">Cost With Time</h2>
+                    <p>This app is a timer to conver the money for the meeting, study etc...</p>
                     <div class="w-more">
-                      <span class="w-ctegory">Ruby on Rails</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Ruby on Rails</span> / <span class="w-date">Jul. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -310,11 +320,11 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-8">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/darts1.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/darts1.gif" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -322,36 +332,37 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Darts detection in video camera with OpenCV</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python OpenCV /span> / <span class="w-date">Dec. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/Inosuke0718/darts/tree/master"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/Arduino.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/Arduino.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">[Under development]<br>Automatically tracks and takes video</h2>
+
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python OpenCV Arduino</span> / <span class="w-date">Feb. 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <!-- <a href=""> <span class="bi bi-plus-circle"></span></a> -->
                     </div>
                   </div>
                 </div>
@@ -387,7 +398,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <!-- <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script> -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
