[update] main correction spell

--- a/index.html
+++ b/index.html
@@ -193,17 +193,17 @@
                       </h5>
                     </div>
                     <p class="lead fw-bold">
-                      Provide joy and pleasue by making things that I love with people who I love.
+                      Provide joy and pleasure by making things that I love with people who I love.
                     </p>
                     <p class="lead">
-                      I'm Web Application enginner.
+                      I'm a web application enginner.
                     </p>
                     <p class="lead">
-                      After I graduated National Institute of Technology, Toyama College, I started working for Yazaki as production enginner.
-                      I was on loan with company Mexico plant for 1 year of the 6 years that I worked for company Yazaki.
+                      After I graduated from National Institute of Technology, Toyama College, I started working as production enginner.
+                      I worked at the company's plant in Mexico for 1 year out of the 6 years that I worked for the company.
                     </p>
                     <p class="lead">
-                      Presently, I am working in the information technology company as Web Application enginner in Miyazaki.
+                      Presently, I am working for an information technology company as a web application enginner in Miyazaki.
                     </p>
 
                     <div class="title-box-2">
@@ -212,7 +212,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Web Application enginner with 3 years of experience in creating, maintaining and implementing source code that made up applications back-end functionalities and also in designing and developing user interfaces, testing.
+                      Web Application enginner with 3 years of experience in creating, maintaining and implementing source code that makes up applications back-end functionalities and also in designing and developing user interfaces, testing.
                     </p>
                     <!-- <p class="lead">
                       and t Proven ability in optimizing web functionality that improve data retrieval and workflow efficiencies.
